# matrix-pickle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml
crates/binencode/: Cargo.toml
crates/binencode-derive/: Cargo.toml
crates/binencode-derive/src/: lib.rs
crates/binencode/src/: decode.rs  encode.rs  error.rs  lib.rs
crates/matrix-pickle/: Cargo.toml  README.md
crates/matrix-pickle-derive/: Cargo.toml  README.md
crates/matrix-pickle-derive/src/: lib.rs
crates/matrix-pickle/src/: decode.rs  encode.rs  error.rs  lib.rs
