[package]
name = "binencode-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.47", default-features = false }
proc-macro-error = { version = "1.0.4", default-features = false }
proc-macro-crate = { version = "1.2.1", default-features = false }
quote = { version = "1.0.21", default-features = false }
syn = { version = "1.0.103", default-features = false }
