[package]
name = "matrix-pickle-derive"
version = "0.2.1"
edition = "2021"
description = "Derive support for matrix-pickle"
repository = "https://github.com/matrix-org/matrix-pickle"
license = "Apache-2.0"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.101", default-features = false }
proc-macro-error2 = { version = "2.0.1", default-features = false }
proc-macro-crate = { version = "3.4.0", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", default-features = false,  features = ["derive", "parsing", "printing", "proc-macro"] }
