[package]
name = "matrix-pickle"
version = "0.2.0"
edition = "2021"
description = "A simple binary encoding format used in the Matrix world"
repository = "https://github.com/matrix-org/matrix-pickle"
license = "MIT"
rust-version = { workspace = true }

[features]
derive = ["dep:matrix-pickle-derive"]
default = ["derive"]

[dependencies]
thiserror = "1.0.58"
matrix-pickle-derive = { version = "0.1.1", path = "../matrix-pickle-derive", optional = true}

[dev-dependencies]
anyhow = "1.0.81"
proptest = "1.4.0"
